{
  "version": 4,
  "terraform_version": "1.10.0",
  "serial": 104,
  "lineage": "99ae312d-c5b6-658d-039a-448539462381",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "public-servers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e2c8caa4b6378d8c",
            "arn": "arn:aws:ec2:us-east-1:600627363311:instance/i-0e7ee78e8edf09a32",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e7ee78e8edf09a32",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "aws_login",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ff0786ba74bd25db",
            "private_dns": "ip-10-1-1-119.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.1.119",
            "public_dns": "ec2-54-224-151-27.compute-1.amazonaws.com",
            "public_ip": "54.224.151.27",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-01e18a8c2552048f4",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04bd6c0becd49dbd7",
            "tags": {
              "Env": "dev",
              "Name": "terraform-aws-testing-Public-Server-1",
              "Owner1": "devopsteam",
              "Owner2": "DEVOPSTEAM"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "terraform-aws-testing-Public-Server-1",
              "Owner1": "devopsteam",
              "Owner2": "DEVOPSTEAM"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e2c3d1eae4874122"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_all_new",
            "aws_subnet.public-subnets",
            "aws_vpc.default",
            "data.http.myip2"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e2c8caa4b6378d8c",
            "arn": "arn:aws:ec2:us-east-1:600627363311:instance/i-06628ced1afebfc09",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06628ced1afebfc09",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "aws_login",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0a845ad93c21e690b",
            "private_dns": "ip-10-1-2-198.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.2.198",
            "public_dns": "ec2-44-200-160-178.compute-1.amazonaws.com",
            "public_ip": "44.200.160.178",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-09279ff90098e1969",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f5712e3ded7dccdb",
            "tags": {
              "Env": "dev",
              "Name": "terraform-aws-testing-Public-Server-2",
              "Owner1": "devopsteam",
              "Owner2": "DEVOPSTEAM"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "terraform-aws-testing-Public-Server-2",
              "Owner1": "devopsteam",
              "Owner2": "DEVOPSTEAM"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e2c3d1eae4874122"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_all_new",
            "aws_subnet.public-subnets",
            "aws_vpc.default",
            "data.http.myip2"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e2c8caa4b6378d8c",
            "arn": "arn:aws:ec2:us-east-1:600627363311:instance/i-050125669a659a63a",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-050125669a659a63a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "aws_login",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-056d3174c1881de09",
            "private_dns": "ip-10-1-3-158.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.3.158",
            "public_dns": "ec2-54-226-164-175.compute-1.amazonaws.com",
            "public_ip": "54.226.164.175",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0e965cf917cb8ecc2",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00649d76caa272703",
            "tags": {
              "Env": "dev",
              "Name": "terraform-aws-testing-Public-Server-3",
              "Owner1": "devopsteam",
              "Owner2": "DEVOPSTEAM"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "terraform-aws-testing-Public-Server-3",
              "Owner1": "devopsteam",
              "Owner2": "DEVOPSTEAM"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e2c3d1eae4874122"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_all_new",
            "aws_subnet.public-subnets",
            "aws_vpc.default",
            "data.http.myip2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:600627363311:internet-gateway/igw-0bcdad4d93ead9753",
            "id": "igw-0bcdad4d93ead9753",
            "owner_id": "600627363311",
            "tags": {
              "Name": "terraform-aws-testing-IGW"
            },
            "tags_all": {
              "Name": "terraform-aws-testing-IGW"
            },
            "vpc_id": "vpc-074ecb8537a42b5a6"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "terraform-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:600627363311:route-table/rtb-0e8827558963c16f4",
            "id": "rtb-0e8827558963c16f4",
            "owner_id": "600627363311",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "terraform-aws-testing-Main-Private-Route-Table"
            },
            "tags_all": {
              "Name": "terraform-aws-testing-Main-Private-Route-Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-074ecb8537a42b5a6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "terraform-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:600627363311:route-table/rtb-0503736cc83206774",
            "id": "rtb-0503736cc83206774",
            "owner_id": "600627363311",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0bcdad4d93ead9753",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terraform-aws-testing-Main-Public-Route-Table"
            },
            "tags_all": {
              "Name": "terraform-aws-testing-Main-Public-Route-Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-074ecb8537a42b5a6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-subnet-assosiation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-048d6a439b9f2777d",
            "route_table_id": "rtb-0e8827558963c16f4",
            "subnet_id": "subnet-0f4861579bb8fd3d8"
          },
          "dependencies": [
            "aws_route_table.terraform-private",
            "aws_subnet.private-subnets",
            "aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b36fb117965b489f",
            "route_table_id": "rtb-0e8827558963c16f4",
            "subnet_id": "subnet-000f558ac3f21e686"
          },
          "dependencies": [
            "aws_route_table.terraform-private",
            "aws_subnet.private-subnets",
            "aws_vpc.default"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-074f7a0981b21c0ab",
            "route_table_id": "rtb-0e8827558963c16f4",
            "subnet_id": "subnet-0a3b11c83a7d78090"
          },
          "dependencies": [
            "aws_route_table.terraform-private",
            "aws_subnet.private-subnets",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-subnet-assosiation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e8062d59ec9a1e1c",
            "route_table_id": "rtb-0503736cc83206774",
            "subnet_id": "subnet-04bd6c0becd49dbd7"
          },
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_route_table.terraform-public",
            "aws_subnet.public-subnets",
            "aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b2db38fe497cd727",
            "route_table_id": "rtb-0503736cc83206774",
            "subnet_id": "subnet-0f5712e3ded7dccdb"
          },
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_route_table.terraform-public",
            "aws_subnet.public-subnets",
            "aws_vpc.default"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0560d5a392fbd88b5",
            "route_table_id": "rtb-0503736cc83206774",
            "subnet_id": "subnet-00649d76caa272703"
          },
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_route_table.terraform-public",
            "aws_subnet.public-subnets",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_all_new",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:600627363311:security-group/sg-0e2c3d1eae4874122",
            "description": "Allow all inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "49.47.250.42/32"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "49.47.250.42/32"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-0e2c3d1eae4874122",
            "ingress": [
              {
                "cidr_blocks": [
                  "49.47.250.42/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "49.47.250.42/32"
                ],
                "description": "",
                "from_port": 3389,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3389
              },
              {
                "cidr_blocks": [
                  "49.47.250.42/32"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "49.47.250.42/32"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-aws-testing-Allow-All_new",
            "name_prefix": "",
            "owner_id": "600627363311",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-074ecb8537a42b5a6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.default",
            "data.http.myip2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:600627363311:subnet/subnet-0f4861579bb8fd3d8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.1.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f4861579bb8fd3d8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "600627363311",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform-aws-testing-1-private-subnet"
            },
            "tags_all": {
              "Name": "terraform-aws-testing-1-private-subnet"
            },
            "vpc_id": "vpc-074ecb8537a42b5a6"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:600627363311:subnet/subnet-000f558ac3f21e686",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.1.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-000f558ac3f21e686",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "600627363311",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform-aws-testing-2-private-subnet"
            },
            "tags_all": {
              "Name": "terraform-aws-testing-2-private-subnet"
            },
            "vpc_id": "vpc-074ecb8537a42b5a6"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:600627363311:subnet/subnet-0a3b11c83a7d78090",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.1.30.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a3b11c83a7d78090",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "600627363311",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform-aws-testing-3-private-subnet"
            },
            "tags_all": {
              "Name": "terraform-aws-testing-3-private-subnet"
            },
            "vpc_id": "vpc-074ecb8537a42b5a6"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:600627363311:subnet/subnet-04bd6c0becd49dbd7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04bd6c0becd49dbd7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "600627363311",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform-aws-testing-1-public-subnet"
            },
            "tags_all": {
              "Name": "terraform-aws-testing-1-public-subnet"
            },
            "vpc_id": "vpc-074ecb8537a42b5a6"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:600627363311:subnet/subnet-0f5712e3ded7dccdb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.1.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f5712e3ded7dccdb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "600627363311",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform-aws-testing-2-public-subnet"
            },
            "tags_all": {
              "Name": "terraform-aws-testing-2-public-subnet"
            },
            "vpc_id": "vpc-074ecb8537a42b5a6"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:600627363311:subnet/subnet-00649d76caa272703",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.1.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00649d76caa272703",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "600627363311",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform-aws-testing-3-public-subnet"
            },
            "tags_all": {
              "Name": "terraform-aws-testing-3-public-subnet"
            },
            "vpc_id": "vpc-074ecb8537a42b5a6"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:600627363311:vpc/vpc-074ecb8537a42b5a6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0267cec3b8c4d0da6",
            "default_route_table_id": "rtb-0ee74182d36dfcc7a",
            "default_security_group_id": "sg-030f16284bdce7756",
            "dhcp_options_id": "dopt-064a3041eda9d751f",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-074ecb8537a42b5a6",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ee74182d36dfcc7a",
            "owner_id": "600627363311",
            "tags": {
              "Name": "terraform-aws-testing",
              "Owner": "DevOpsTeam",
              "environment": "dev"
            },
            "tags_all": {
              "Name": "terraform-aws-testing",
              "Owner": "DevOpsTeam",
              "environment": "dev"
            }
          }
        }
      ]
    }
  ]
}